--- a/config.yml.dist
+++ b/config.yml.dist
@@ -43,6 +43,8 @@ gitlab:
         groupNamesOfAdministrators:     []
         groupNamesOfExternal:           []
 
+        rootGroupName:                  null
+
     instances:
         example:
             url:            ~
